[package]
name = "kasm"
version = "0.0.1"
authors = [ "Rod Vagg <r@va.gg>" ]
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
byteorder = "1.5"
hex = "0.4"
once_cell = "1.18"
rstest = "0.26"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21.5"
regex = "1.10.2"
fhex = "1.0.0"
rand = "0.8.5"
thiserror = "1.0.56"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
wat = "1"

[[bench]]
name = "validation"
harness = false

[[bench]]
name = "execution"
harness = false

[[bin]]
name = "test-coverage"
path = "src/bin/test_coverage.rs"
