[package]
name = "kasm"
version = "0.0.1"
authors = [ "Rod Vagg <r@va.gg>" ]
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
byteorder = "1.5"
hex = "0.4"
once_cell = "1.18"
rstest = "0.26"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.1"
regex = "1.12.3"
fhex = "2"
rand = "0.10.0"
thiserror = "2.0.18"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.10"

[[bench]]
name = "validation"
harness = false

[[bench]]
name = "execution"
harness = false

[[bin]]
name = "test-coverage"
path = "src/bin/test_coverage.rs"
