[package]
name = "commp"
version = "0.1.0"
edition = "2024"
description = "Filecoin CommP (Piece Commitment) for WASI"

[[bin]]
name = "commp"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
sha2 = { version = "0.10", default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
